// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Carousel /> should render correctly with children 1`] = `
<div
  className="carousel"
>
  <TopArticlesPlaceholder
    height="420px"
    numberOfPlaceholders={3}
  />
  <nav
    className="carousel--nav"
  >
    <button
      className="carousel--nav-arrow"
      onClick={[Function]}
      type="button"
    >
      <Icon
        color="darker"
        icon={<Memo />}
        size="regular"
      />
    </button>
    <div
      key=".0"
    >
      <button
        className="carousel--nav-item -active"
        key="0"
        onClick={[Function]}
        type="button"
      >
        <Icon
          icon={<Memo />}
          size="regular"
        />
      </button>
    </div>
    <div
      key=".1"
    >
      <button
        className="carousel--nav-item"
        key="1"
        onClick={[Function]}
        type="button"
      >
        <Icon
          icon={<Memo />}
          size="regular"
        />
      </button>
    </div>
    <div
      key=".2"
    >
      <button
        className="carousel--nav-item"
        key="2"
        onClick={[Function]}
        type="button"
      >
        <Icon
          icon={<Memo />}
          size="regular"
        />
      </button>
    </div>
    <button
      className="carousel--nav-arrow"
      onClick={[Function]}
      type="button"
    >
      <Icon
        color="darker"
        icon={<Memo />}
        size="regular"
      />
    </button>
  </nav>
</div>
`;

exports[`<Carousel /> should render correctly with two children 1`] = `
<div
  className="carousel"
>
  <TopArticlesPlaceholder
    height="420px"
    numberOfPlaceholders={3}
  />
  <nav
    className="carousel--nav"
  >
    <button
      className="carousel--nav-arrow"
      onClick={[Function]}
      type="button"
    >
      <Icon
        color="darker"
        icon={<Memo />}
        size="regular"
      />
    </button>
    <div
      key=".0"
    >
      <button
        className="carousel--nav-item -active"
        key="0"
        onClick={[Function]}
        type="button"
      >
        <Icon
          icon={<Memo />}
          size="regular"
        />
      </button>
    </div>
    <div
      key=".1"
    >
      <button
        className="carousel--nav-item"
        key="1"
        onClick={[Function]}
        type="button"
      >
        <Icon
          icon={<Memo />}
          size="regular"
        />
      </button>
    </div>
    <button
      className="carousel--nav-arrow"
      onClick={[Function]}
      type="button"
    >
      <Icon
        color="darker"
        icon={<Memo />}
        size="regular"
      />
    </button>
  </nav>
</div>
`;
